@@ -1,3 +1,11 @@
+2009-07-20  Doug Evans  <dje@google.com>
+
+	Add some dwarf4 values.
+	* dwarf2.h (enum dwarf_tag): Add DW_TAG_type_unit.
+	(enum dwarf_form): Add DW_FORM_sec_offset, DW_FORM_exprloc,
+	DW_FORM_flag_present, DW_FORM_sig8.
+	(enum dwarf_attribute): Add DW_AT_signature.
+
 2009-07-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* demangle.h
